maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:39: error: type mismatch;
 found   : Unit
 required: Int
    if (!aMurNord(x,y+1)) {
    ^JediEscaper:38: error: type mismatch;
 found   : Unit
 required: Int
  if (y < getMondeHauteur() - 1 && getIndication(x,y+1) == b - 1) {
  ^